@@ -1,0 +1,3 @@
+*.pyc
+TODO
+memories/
