@@ -1,0 +1,2 @@
+#!/bin/bash
+sudo cp /home/pi/lobsang/bash/backup.sh /usr/bin/backup
